Fixed About Backend/Frontend Bugs - Added Project Backend

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/about.css" />
     <link rel="stylesheet" type="text/css" href="static/css/project.css" />
     <link rel="stylesheet" type="text/css" href="static/css/contact.css" />
-    <title>Portfolio| Jonathan</title>
+    <title>{ J }</title>
 </head>
 
 <body>
