--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" type="text/css" href="static/css/about.css" />
     <link rel="stylesheet" type="text/css" href="static/css/project.css" />
     <link rel="stylesheet" type="text/css" href="static/css/contact.css" />
-    <title>{ J }</title>
+    <link rel="stylesheet" type="text/css" href="static/css/admin.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/login.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/register.css" />
+    <title>{ J } | Portfolio</title>
 </head>
 
 <body>
