--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/admin.css" />
     <link rel="stylesheet" type="text/css" href="static/css/login.css" />
     <link rel="stylesheet" type="text/css" href="static/css/register.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/jcode.css" />
     <title>{ J } | Portfolio</title>
 </head>
 
