Prepare for deployment

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Jonathan Moussa NDAO's portfolio" />
+    <link rel='icon' href="static/images/jLogo_250x250.svg" />
     <link rel="stylesheet" type="text/css" href="static/css/index.css" />
     <link rel="stylesheet" type="text/css" href="static/css/about.css" />
     <link rel="stylesheet" type="text/css" href="static/css/project.css" />
