Google meta tag for ownership verification

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" type="text/css" href="static/css/login.css" />
     <link rel="stylesheet" type="text/css" href="static/css/register.css" />
     <link rel="stylesheet" type="text/css" href="static/css/jcode.css" />
+    <!-- Google SEO -->
+    <meta name="google-site-verification" content="lhlB0_E7VCo38mMLtAIP_peBu1F_DKtPahnD9COg6Lo" />
     <title>{ J } | Portfolio</title>
 </head>
 
